regen site to add fediverse to about and verification link

--- a/about.Rmd
+++ b/about.Rmd
@@ -12,4 +12,5 @@ Find me online:
 
   - `r fontawesome::fa("twitter")` [`@milesmcbain`](https://www.twitter.com/milesmcbain)
   - `r fontawesome::fa("github")` [`@milesmcbain`](https://www.github.com/milesmcbain)
+  - `r fontawesome::fa("mastodon")` [`@milesmcbain@fosstodon.org`](https://fosstodon.org/@milesmcbain)
   - [`micro.blog/milesmcbain`](https://micro.blog/milesmcbain)
