--- a/_posts/assertive-programming-for-pipelines/assertive_programming_for_pipelines.Rmd
+++ b/_posts/assertive-programming-for-pipelines/assertive_programming_for_pipelines.Rmd
@@ -117,9 +117,9 @@ These assertions become useful yardsticks when working backward from a bug in th
 
 # Conclusion
 
-I'm really enjoying `{testhat}` for my in-pipeline assertive programming at the moment. I can use the same kinds of patterns I use in my package code tests, which reduces my cognitive load as I context switch. And the fact that one package can span both the testing and assertive programming use cases possibly hints at a deeper relationship between the two. In my opinion, assertive programming can be employed as a kind of dual of traditional software testing, conveying equivalent benefits in the right context.
+I'm really enjoying `{testthat}` for my in-pipeline assertive programming at the moment. I can use the same kinds of patterns I use in my package code tests, which reduces my cognitive load as I context switch. And the fact that one package can span both the testing and assertive programming use cases possibly hints at a deeper relationship between the two. In my opinion, assertive programming can be employed as a kind of dual of traditional software testing, conveying equivalent benefits in the right context.
 
-There's one significant advantage assertive programming has over traditional testing for pipelines that is worth mentioning and remembering if you're ever challenged about it: by design, software tests run outside of the 'production' pipeline code. The test suite is separate from the main codebase that gets the work done. A consequence of that is that even though the tests exist, there is nothing that guarantees they all passed, or indeed even ran, before the pipeline code was executed. By moving the test conditions into the pipeline and expressing them as assertions, we guarantee all the conditions were met, otherwise, the pipeline would have failed to complete. This is a very useful guarantee from a reproducibility perspective.
+There's one significant advantage assertive programming has over traditional testing for pipelines that is worth mentioning and remembering if you're ever challenged about it: by design, software tests run outside of the 'production' pipeline code. The test suite is separate from the main codebase that gets the work done. A consequence of that is even though the tests exist, there is nothing that guarantees they all passed, or indeed even ran, before the pipeline code was executed. By moving the test conditions into the pipeline and expressing them as assertions, we guarantee all the conditions were met, otherwise, the pipeline would have failed to complete. This is a very useful guarantee from a reproducibility perspective.
 
 Some other packages I've used, and recommend for assertive programming:
   - [`{assertthat}`](https://github.com/hadley/assertthat) It's a lightweight assertion package by Hadley, the reporting is not as nice as `{testthat}` but it has some handy one-liners for common assertions.
